# TableauDeBordLaRaffinerie

./: db.sqlite3  manage.py  pyproject.toml
analyse_budget/: apps.py  urls.py  views.py
analyse_budget/static/css/: main.css
analyse_budget/templates/base/: base.html  side_navbar.html
analyse_budget/templates/budget/: plan_tresorie.html  suivi_subvention.html  tableaux_budgetaires.html
events_and_goals/: apps.py  urls.py  views.py
events_and_goals/templates/events/: events.html  volunteering.html
events_and_goals/templates/goals/: goals.html
members/: models.py  urls.py  views.py
members/migrations/: 0001_initial.py
members/templates/members/: raffineurs.html
project_raff_dashbord/: asgi.py  settings.py  urls.py  wsgi.py
