[tool.poetry]
name = "dashbord raffinerie"
version = "0.1.0"
description = "Dashbord for budget, volonteering, events and other analyses"
authors = ["glen llaci"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
djangorestframework = "3.12"
uuid = "^1.30"
pillow = "^9.3.0"
ipdb = "^0.13.11"
ipython = "8.11.0"
django-browser-reload = "^1.7.0"
django-extensions = "^3.2.1"
stripe = "^5.4.0"
django-solo = "^2.0.0"
django-stdimage = "^6.0.1"
mailchimp-marketing = "^3.0.80"
mailchimp-transactional = "^1.0.50"
celery = "^5.2.7"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
